2008-06-10 Gian Mario Tagliaretti  <gianmt@gnome.org>

	* poppler.defs: Fix a compilation failure against poppler 0.8.3
	Fixes LP#238653. Patch from Chris Mayo.

2008-06-10 Gian Mario Tagliaretti  <gianmt@gnome.org>

	* configure.ac: post release version bump 0.8.1

=== 0.8.0 ===
2008-05-07 Gian Mario Tagliaretti  <gianmt@gnome.org>

	* NEWS: update

2008-05-07 Gian Mario Tagliaretti  <gianmt@gnome.org>

	* poppler.defs:
	* poppler.override: Update with poppler 0.8 API.

2007-12-21 Gian Mario Tagliaretti  <gianmt@gnome.org>

	* demo/demo-poppler.py: fix a small bug, index for pages starts at 0,
	thanks to Pablo Rodriguez, fix rendering thanks to Ian Kanto .

2007-12-21 Gian Mario Tagliaretti  <gianmt@gnome.org>

	* configure.ac: post release version bump 0.6.3

=== 0.6.2 ===
2007-12-21 Gian Mario Tagliaretti  <gianmt@gnome.org>

	* NEWS: update

2007-12-21 Gian Mario Tagliaretti  <gianmt@gnome.org>

	* demo/Makefile.am: ship the demo in tarball, thanks to Pablo Rodriguez
	for pointing this out.

2007-12-14 Gian Mario Tagliaretti  <gianmt@gnome.org>

	* poppler.override: Wrap poppler_page_get_image_mapping and
	poppler_page_get_form_field_mapping

2007-12-14 Gian Mario Tagliaretti  <gianmt@gnome.org>

	* poppler.override: Wrap poppler_page_get_link_mapping

2007-12-14 Gian Mario Tagliaretti  <gianmt@gnome.org>

	* poppler.override: Wrap poppler_page_get_thumbnail_size

2007-11-14 Gian Mario Tagliaretti  <gianmt@gnome.org>

	* configure.ac: bump to version 0.6.2

=== 0.6.1 ===
2007-12-12 Gian Mario Tagliaretti  <gianmt@gnome.org>

	* demo/demo-poppler.py: Small change to test poppler_font_info_scan

2007-12-12 Gian Mario Tagliaretti  <gianmt@gnome.org>

	* poppler.override: Wrap poppler_font_info_scan

2007-12-12 Gian Mario Tagliaretti  <gianmt@gnome.org>

	* demo/demo-poppler.py: Add a simple example.

2007-12-09 Gian Mario Tagliaretti  <gianmt@gnome.org>

	* poppler.defs: Strip poppler prefix from functions, make
	document_new_from_file actually work.
